--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Home Page -->
+    <!-- Navbar -->
+    <!-- Carousel -->
+    <!-- Footer -->
 </body>
 </html>
