Logo added to website

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <!-- Home Page -->
     <!-- Navbar -->
+    <div class="navbar">
+        <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
+    </div>
     <!-- Carousel -->
     <!-- Footer -->
 </body>
