Motto and Home, Staff, Sports texts made

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <!-- Navbar -->
     <div class="navbar">
         <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
+        <p class="motto">Charity Fulfils The Law</p>
+        <a class="links" href="index.html">Home</a>
+        <a class="links" href="">Staff</a>
+        <a class="links" href="">Sport</a>
     </div>
     <!-- Carousel -->
     <!-- Footer -->
