--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
+        <h1 class="name">Rosmini<br> College</h1>
         <p class="motto">Charity Fulfils The Law</p>
         <a class="links" href="index.html">Home</a>
         <a class="links" href="">Staff</a>
