Other Navbar directories added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <a class="links" href="index.html">Home</a>
         <a class="links" href="">Staff</a>
         <a class="links" href="">Sport</a>
+        <p class="links">Contact Us</p>
+        <p class="links">Student Support</p>
+        <p class="links">Learning areas</p>
+        <p class="links">Newsletter</p>
         
     </div>
     <!-- Carousel -->
