--- a/index.html
+++ b/index.html
@@ -24,36 +24,34 @@
         
     </div>
     <!-- Carousel -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <div id="mycarousel" class="caoursel_slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#mycarousel" data-slide-to="1"></li>
-          <li data-target="#mycarousel" data-slide-to="2"></li>
-          <li data-target="#mycarousel" data-slide-to="3"></li>
-          <li data-target="#mycarousel" data-slide-to="4"></li>
-        </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="overlay-image1">
-            <img src="_dte_final_assessment\Images\slide-1.jpg" alt="">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="_dte_final_assessment\Images\slide-1.jpg" class="d-block w-100" alt="Hello ">
+            </div>
+            <div class="carousel-item">
+              <img src="_dte_final_assessment\Images\slide-2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="_dte_final_assessment\Images\slide-3.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="_dte_final_assessment\Images\slide-4.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="_dte_final_assessment\Images\slide-5.jpg" class="d-block w-100" alt="...">
+            </div>
           </div>
-          <div class="container"><h1>Hello World</h1></div>
-      </div> 
-        <div class="carousel-item">
-          <div class="overlay-image2"></div>
-          <div class="container">div>
-      </div>
-        <div class="carousel-item">
-          <div class="overlay-image3"></div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <div class="carousel-item">
-          <div class="overlay-image4"></div>
-        </div>
-        <div class="carousel-item">
-          <div class="overlay-image5"></div>
-        </div>
-      
     <!-- Footer -->
 </body>
 </html>
+
