--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
         
     </div>
     <!-- Carousel -->
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="_dte_final_assessment\Images\slide-1.jpg" class="d-block w-100" alt="Hello ">
-            </div>
-            <div class="carousel-item">
-              <img src="_dte_final_assessment\Images\slide-2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="_dte_final_assessment\Images\slide-3.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="_dte_final_assessment\Images\slide-4.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="_dte_final_assessment\Images\slide-5.jpg" class="d-block w-100" alt="...">
-            </div>
+     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="_dte_final_assessment\Images\slide-1.jpg" class="d-block w-100" alt="Hello ">
           </div>
+          <div class="carousel-item">
+            <img src="_dte_final_assessment\Images\slide-2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="_dte_final_assessment\Images\slide-3.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="_dte_final_assessment\Images\slide-4.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="_dte_final_assessment\Images\slide-5.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
@@ -50,7 +50,9 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
-        </div>
+      </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.7/jquery.min.js"></script>
+        <script src="js/bootstrap.js"></script>
     <!-- Footer -->
 </body>
 </html>
