--- a/index.html
+++ b/index.html
@@ -24,35 +24,36 @@
         
     </div>
     <!-- Carousel -->
-     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+     <div id="mycarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="_dte_final_assessment\Images\slide-1.jpg" class="d-block w-100" alt="Hello ">
+            <img src="Images\slide-1.jpg" class="d-block w-100" alt="Hello ">
           </div>
           <div class="carousel-item">
-            <img src="_dte_final_assessment\Images\slide-2.jpg" class="d-block w-100" alt="...">
+            <img src="Images\slide-2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="_dte_final_assessment\Images\slide-3.jpg" class="d-block w-100" alt="...">
+            <img src="Images\slide-3.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="_dte_final_assessment\Images\slide-4.jpg" class="d-block w-100" alt="...">
+            <img src="Images\slide-4.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="_dte_final_assessment\Images\slide-5.jpg" class="d-block w-100" alt="...">
+            <img src="Images\slide-5.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <!-- Left and Right controls -->
+          <a class="carousel-control-prev" href="#mycarousel" data-slide="prev">
+            <span class="carousel-control-prev-icon" ></span>
             <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </a>
+          <a class="carousel-control-next" href="#mycarousel" data-slide="next">
+            <span class="carousel-control-next-icon" ></span>
             <span class="visually-hidden">Next</span>
-          </button>
+          </a>
       </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.7/jquery.min.js"></script>
-        <script src="js/bootstrap.js"></script>
+        
     <!-- Footer -->
 </body>
 </html>
