--- a/index.html
+++ b/index.html
@@ -71,8 +71,33 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </div>
-        
-    <!-- Footer -->
+<!-- Body -->
+<div class="body">
+  <p>Rosmini College is a Catholic Boys' School founded by the Rosminian order to provide a Catholic education to young men on Auckland's North Shore. We aim to shape them into well-rounded young men ready to leave school who are able to make a positive contribution to society and are empowered to serve others by living out the founder’s maxims.
+    <br><br><br>    
+    <b>Our Mission</b>: Rosmini College supports and develops well-rounded young men while keeping true to the maxims of Antonio Rosmini.  A holistic education in the Rosminian tradition that fosters a genuine encounter with Christ.
+    <br><br>
+    <b>Our Vision</b>: Christ-centred young men who have the values, attitudes, knowledge and skills to fulfil their life and be empowered to serve others.
+    <br><br>
+    <b>Our Values</b>: Dignity. Integrity. Fairness. Charity. Justice
+    <br><br>
+    <b>Our Motto</b>: Charity fulfils the law.
+    <br><br>
+    <b>Treaty of Waitangi</b>: Rosmini College is committed to the principles of the Treaty of Waitangi and actively supports and encourages the achievement of its Maori pupils and fosters Maori culture.
+    <br><br>
+    <b>Special Character</b>: Rosmini College is a learning community that requires each student to pursue his fullest potential in spiritual, academic, social, cultural and co-curricular pursuits. The school will equip each student with the desire to keep the Law of Christ;  
+    <br><br>
+    “Love the Lord your God with your whole heart and your neighbour as yourself.”</p>
+</div>
+<!-- Footer -->
+<div class="footer">
+  <p class="contactinfo">Contact Us <br>
+    36 Dominion Street <br>
+    Takapuna <br>
+    Auckland, 0622 <br>
+    Phone: +64 9 489 5417 <br>
+    admin@rosmini.school.nz</p>
+</div>
 </body>
 
 </html>
