Footer and Homepage finished

--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@
     Auckland, 0622 <br>
     Phone: +64 9 489 5417 <br>
     admin@rosmini.school.nz</p>
+    <div class="sitemapstd">
+      <h5>Students</h5>
+      <a class="sitemap" href="index.html">Home</a><br>
+      <a class="sitemap" href="">Sport</a>
+      <p class="sitemap">Student Support</p>
+    </div>
+    <div class="sitemappar">
+      <h5>Parents</h5>
+      <a class="sitemap" href="">Staff</a>
+      <p class="sitemap">Learning areas</p>
+      <p class="sitemap">Newsletter</p>
+      <p class="sitemap">Contact Us</p>
+    </div>
 </div>
 </body>
 
