Sports page link added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p class="motto">Charity Fulfils The Law</p>
       <a class="links" href="index.html">Home</a>
       <a class="links" href="">Staff</a>
-      <a class="links" href="">Sport</a>
+      <a class="links" href="sport.html">Sport</a>
       <p class="links">Contact Us</p>
       <p class="links">Student Support</p>
       <p class="links">Learning areas</p>
