Navbar, footer and body adjusted

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <div class="navbar">
       <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
       <h1 class="name">Rosmini<br> College</h1>
-      <p class="motto">Charity Fulfils The Law</p>
       <a class="links" href="index.html">Home</a>
       <a class="links" href="">Staff</a>
       <a class="links" href="sport.html">Sport</a>
@@ -23,7 +22,10 @@
       <p class="links">Student Support</p>
       <p class="links">Learning areas</p>
       <p class="links">Newsletter</p>
-        
+      
+   </div>
+   <div class="motto">
+    <h2 class="motto">Charity Fulfils The Law</h2>
    </div>
     <!-- Carousel -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -75,22 +77,23 @@
 <div class="body">
   <p>Rosmini College is a Catholic Boys' School founded by the Rosminian order to provide a Catholic education to young men on Auckland's North Shore. We aim to shape them into well-rounded young men ready to leave school who are able to make a positive contribution to society and are empowered to serve others by living out the founder’s maxims.
     <br><br><br>    
-    <b>Our Mission</b>: Rosmini College supports and develops well-rounded young men while keeping true to the maxims of Antonio Rosmini.  A holistic education in the Rosminian tradition that fosters a genuine encounter with Christ.
+    <span><b>Our Mission</b>:</span> <br> Rosmini College supports and develops well-rounded young men while keeping true to the maxims of Antonio Rosmini.  A holistic education in the Rosminian tradition that fosters a genuine encounter with Christ.
     <br><br>
-    <b>Our Vision</b>: Christ-centred young men who have the values, attitudes, knowledge and skills to fulfil their life and be empowered to serve others.
+    <span><b>Our Vision</b>:</span> <br> Christ-centred young men who have the values, attitudes, knowledge and skills to fulfil their life and be empowered to serve others.
     <br><br>
-    <b>Our Values</b>: Dignity. Integrity. Fairness. Charity. Justice
+    <span><b>Our Values</b>:</span> <br> Dignity. Integrity. Fairness. Charity. Justice
     <br><br>
-    <b>Our Motto</b>: Charity fulfils the law.
+    <span><b>Our Motto</b>:</span> <br> Charity fulfils the law.
     <br><br>
-    <b>Treaty of Waitangi</b>: Rosmini College is committed to the principles of the Treaty of Waitangi and actively supports and encourages the achievement of its Maori pupils and fosters Maori culture.
+    <span><b>Treaty of Waitangi</b>:</span> <br> Rosmini College is committed to the principles of the Treaty of Waitangi and actively supports and encourages the achievement of its Maori pupils and fosters Maori culture.
     <br><br>
-    <b>Special Character</b>: Rosmini College is a learning community that requires each student to pursue his fullest potential in spiritual, academic, social, cultural and co-curricular pursuits. The school will equip each student with the desire to keep the Law of Christ;  
+    <span><b>Special Character</b>:</span> <br> Rosmini College is a learning community that requires each student to pursue his fullest potential in spiritual, academic, social, cultural and co-curricular pursuits. The school will equip each student with the desire to keep the Law of Christ;  
     <br><br>
-    “Love the Lord your God with your whole heart and your neighbour as yourself.”</p>
+    <span class="quote">“Love the Lord your God with your whole heart and your neighbour as yourself.”</span></p>
 </div>
 <!-- Footer -->
 <div class="footer">
+  <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
   <p class="contactinfo">Contact Us <br>
     36 Dominion Street <br>
     Takapuna <br>
@@ -98,13 +101,11 @@
     Phone: +64 9 489 5417 <br>
     admin@rosmini.school.nz</p>
     <div class="sitemapstd">
-      <h5>Students</h5>
       <a class="sitemap" href="index.html">Home</a><br>
-      <a class="sitemap" href="">Sport</a>
+      <a class="sitemap" href="sport.html">Sport</a>
       <p class="sitemap">Student Support</p>
     </div>
     <div class="sitemappar">
-      <h5>Parents</h5>
       <a class="sitemap" href="">Staff</a>
       <p class="sitemap">Learning areas</p>
       <p class="sitemap">Newsletter</p>
