--- a/sport.html
+++ b/sport.html
@@ -9,21 +9,63 @@
 <body>
     <!-- Sports page -->
     <!-- Navbar -->
-    <div class="navbar">
-        <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
-        <h1 class="name">Rosmini<br> College</h1>
-        <p class="motto">Charity Fulfils The Law</p>
-        <a class="links" href="index.html">Home</a>
-        <a class="links" href="">Staff</a>
-        <a class="links" href="sport.html">Sport</a>
-        <p class="links">Contact Us</p>
-        <p class="links">Student Support</p>
-        <p class="links">Learning areas</p>
-        <p class="links">Newsletter</p>
-          
-     </div>
-    <!-- Images -->
+  <div class="navbar">
+    <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
+    <h1 class="name">Rosmini<br> College</h1>
+    <a class="links" href="index.html">Home</a>
+    <a class="links" href="">Staff</a>
+    <a class="links" href="sport.html">Sport</a>
+    <p class="links">Contact Us</p>
+    <p class="links">Student Support</p>
+    <p class="links">Learning areas</p>
+    <p class="links">Newsletter</p>
     
+ </div>
+ <div class="motto">
+  <h2 class="motto">Charity Fulfils The Law</h2>
+ </div>
+    <!-- Body -->
+<div class="body">
+    <h2>Rosmini College Sports</h2>
+    <p>
+        Sport at Rosmini College is an integral element of holistic education and helps promote a healthy and active lifestyle. We have a strong sporting culture and value performance at both the elite and participation levels, offering competitive opportunities in various codes. It is important for young men to involve themselves with physical endeavours throughout their time at school and sport offers a platform for this.
+        <br><br>
+        We are committed to:
+        <br><br>
+        Providing opportunities for all students to develop a healthy lifestyle through a breadth and depth of physical activities.
+        Ensuring all students participate in a holistic curriculum which embeds physical activity into their daily routine.
+        Fostering and nurturing athletes who aspire to excellence in their selected codes.
+        Developing the whole person as well as the athlete.
+        Engaging with the school's wider community through developing partnerships with external agencies, regional and national sporting bodies and other schools.
+        Rosmini College primarily focuses on encouraging enjoyment of sport and traditions of sportmanship and fair play. Further to this, excellence is also valued and the Rosmini College High Performance Sport programme is designed to cater for those individuals aiming to follow a pathway of competitive sport.
+    </p>
+</div>
+    <!-- Images -->
+    <div class="image123">
+        <img class="img" src="Images\basketball.jpg" alt="basketball">
+        <img class="img" src="Images\hockey.jpg" alt="hockey">
+        <img class="img" src="Images\snowboard.jpg" alt="snowboarding">
+    </div>
     <!-- Footer -->
+    <div class="footer">
+        <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
+        <p class="contactinfo">Contact Us <br>
+          36 Dominion Street <br>
+          Takapuna <br>
+          Auckland, 0622 <br>
+          Phone: +64 9 489 5417 <br>
+          admin@rosmini.school.nz</p>
+          <div class="sitemapstd">
+            <a class="sitemap" href="index.html">Home</a><br>
+            <a class="sitemap" href="sport.html">Sport</a>
+            <p class="sitemap">Student Support</p>
+          </div>
+          <div class="sitemappar">
+            <a class="sitemap" href="">Staff</a>
+            <p class="sitemap">Learning areas</p>
+            <p class="sitemap">Newsletter</p>
+            <p class="sitemap">Contact Us</p>
+          </div>
+      </div>
 </body>
 </html>
