--- a/sport.html
+++ b/sport.html
@@ -41,11 +41,32 @@
     </p>
 </div>
     <!-- Images -->
-    <div class="image123">
-        <img class="img" src="Images\basketball.jpg" alt="basketball">
-        <img class="img" src="Images\hockey.jpg" alt="hockey">
-        <img class="img" src="Images\snowboard.jpg" alt="snowboarding">
+  <div class="images">
+    <div class="imgs1">
+      <div class="text123">
+        <p class="txt">Basketball</p>
+        <p class="txt">Hockey</p>
+        <p class="txt">Snowboarding</p>
+      </div>
+      <div class="image123">
+          <img class="img" src="Images\basketball.jpg" alt="basketball">
+          <img class="img" src="Images\hockey.jpg" alt="hockey">
+          <img class="img" src="Images\snowboard.jpg" alt="snowboarding">
+      </div>
     </div>
+    <div class="imgs2">
+      <div class="text456">
+        <p class="txt">Cricket</p>
+        <p class="txt">Track</p>
+        <p class="txt">Tennis</p>
+      </div>
+      <div class="image456">
+        <img class="img" src="Images\cricket.jpg" alt="cricket">
+        <img class="img" src="Images\track.jpg" alt="Track">
+        <img class="img" src="Images\tennis.jpg" alt="Tennis">
+      </div>
+    </div>
+  </div>
     <!-- Footer -->
     <div class="footer">
         <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
