Sports images added

--- a/sport.html
+++ b/sport.html
@@ -66,6 +66,18 @@
         <img class="img" src="Images\tennis.jpg" alt="Tennis">
       </div>
     </div>
+    <div class="imgs3">
+      <div class="text789">
+        <p class="txt">Waterpolo</p>
+        <p class="txt">Lacrosse</p>
+        <p class="txt">Rugby</p>
+      </div>
+      <div class="image789">
+        <img class="img" src="Images/water polo.jpg" alt="Waterpolo">
+        <img class="img" src="Images/lacrose.jpg" alt="Lacrosse">
+        <img class="img" src="Images/rugby.jpg" alt="Rugby">
+      </div>
+    </div>
   </div>
     <!-- Footer -->
     <div class="footer">
