--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
       <h1 class="name">Rosmini<br> College</h1>
       <a class="links" href="index.html">Home</a>
-      <a class="links" href="">Staff</a>
+      <a class="links" href="staff.html">Staff</a>
       <a class="links" href="sport.html">Sport</a>
       <p class="links">Contact Us</p>
       <p class="links">Student Support</p>
@@ -106,7 +106,7 @@
       <p class="sitemap">Student Support</p>
     </div>
     <div class="sitemappar">
-      <a class="sitemap" href="">Staff</a>
+      <a class="sitemap" href="staff.html">Staff</a>
       <p class="sitemap">Learning areas</p>
       <p class="sitemap">Newsletter</p>
       <p class="sitemap">Contact Us</p>
