DTE Staff added

--- a/staff.html
+++ b/staff.html
@@ -25,6 +25,17 @@
       <h2 class="motto">Charity Fulfils The Law</h2>
      </div>
     <!-- Body -->
+    <div class="table">
+      <div class="digitaltable">
+        <tr class="Digitaltech">
+          <h3>Digital Technology</h3>
+          <th><p>Mr. John Digital Technology</p></th>
+          <th><img class="staffimg" src="Images/John.png" alt="Mr John"></th>
+          <th><p>Mr. Foong Digital Technology</p></th>
+          <th><img class="staffimg" src="Images/Foong.png" alt="Mr Foong"></th>
+        </tr>
+      </div>
+  </div>
     <!-- Footer -->
     <div class="footer">
         <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
