--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       
    </div>
    <div class="motto">
-    <h2 class="motto">Charity Fulfils The Law</h2>
+    <h2 >Charity Fulfils The Law</h2>
    </div>
     <!-- Carousel -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
