--- a/sport.html
+++ b/sport.html
@@ -22,7 +22,7 @@
     
  </div> 
  <div class="motto">
-  <h2 class="motto">Charity Fulfils The Law</h2>
+  <h2>Charity Fulfils The Law</h2>
  </div>
     <!-- Body -->
 <div class="body">
