Motto and Table added

--- a/staff.html
+++ b/staff.html
@@ -22,20 +22,36 @@
         
      </div>
      <div class="motto">
-      <h2 class="motto">Charity Fulfils The Law</h2>
+      <h2 >Charity Fulfils The Law</h2>
      </div>
     <!-- Body -->
     <div class="table">
-      <div class="digitaltable">
-        <tr class="Digitaltech">
-          <h3>Digital Technology</h3>
-          <th><p>Mr. John Digital Technology</p></th>
-          <th><img class="staffimg" src="Images/John.png" alt="Mr John"></th>
-          <th><p>Mr. Foong Digital Technology</p></th>
-          <th><img class="staffimg" src="Images/Foong.png" alt="Mr Foong"></th>
-        </tr>
-      </div>
-  </div>
+          <tr class="Digitaltech">
+            <!--Digital Technology -->
+          <div class="digitable">
+            <h3>Digital Technology</h3>
+            <th><p>Mr. John Digital Technology</p></th>
+            <th><img class="staffimg" src="Images/John.png" alt="Mr John"></th>
+            <th><p>Mr. Foong Digital Technology</p></th>
+            <th><img class="staffimg" src="Images/Foong.png" alt="Mr Foong"></th>
+          </div> 
+            <!-- Geography -->
+            <div class="geotable1">
+              <h3>Geography</h3>        
+              <th><p>Mr. Latch Geography</p></th>
+              <th><img class="staffimg" src="Images/latch.png" alt="Mr. Latch"></th>
+              <th><p>Mr. Maggs Geography</p></th>
+              <th><img class="staffimg" src="Images/maggs.png" alt="Mr. Maggs"></th>
+            </div>
+            <div class="geotable2">
+              <br><br>
+              <th><p>Mr. Cooper Geography</p></th>
+              <th><img class="staffimg" src="Images/cooper.png" alt="Mr. Cooper"></th>
+              <th><p>Mrs. Morrogh Geography</p></th>
+              <th><img class="staffimg" src="Images/morrogh.png" alt="Mrs. Morrogh"></th>
+            </div>
+      </tr>
+    </div>
     <!-- Footer -->
     <div class="footer">
         <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
