--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <!-- Home Page -->
+  <!-- NoT AI -->
   <!-- Navbar -->
   <div class="navbar">
       <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
