--- a/sport.html
+++ b/sport.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <!-- NOT AI  -->
     <!-- Sports page -->
     <!-- Navbar -->
   <div class="navbar">
