Body text color scheme changed. Link hover added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- NoT AI -->
   <!-- Navbar -->
   <div class="navbar">
+    <!-- Links to different pages -->
       <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
       <h1 class="name">Rosmini<br> College</h1>
       <a class="links" href="index.html">Home</a>
@@ -28,6 +29,7 @@
       <p class="links">Newsletter</p>
       
    </div>
+   <!-- Schoool motto -->
    <div class="motto">
     <h2 >Charity Fulfils The Law</h2>
    </div>
@@ -79,7 +81,8 @@
 </div>
 <!-- Body -->
 <div class="body">
-  <p>Rosmini College is a Catholic Boys' School founded by the Rosminian order to provide a Catholic education to young men on Auckland's North Shore. We aim to shape them into well-rounded young men ready to leave school who are able to make a positive contribution to society and are empowered to serve others by living out the founder’s maxims.
+  <!-- Body text -->
+  <p><span class="aboutp1">Rosmini College is a Catholic Boys' School founded by the Rosminian order to provide a Catholic education to young men on Auckland's North Shore. We aim to shape them into well-rounded young men ready to leave school who are able to make a positive contribution to society and are empowered to serve others by living out the founder's maxims.</span>
     <br><br><br>    
     <span><b>Our Mission</b>:</span> <br> Rosmini College supports and develops well-rounded young men while keeping true to the maxims of Antonio Rosmini.  A holistic education in the Rosminian tradition that fosters a genuine encounter with Christ.
     <br><br>
