--- a/sport.html
+++ b/sport.html
@@ -10,7 +10,9 @@
   <!-- NOT AI  -->
     <!-- Sports page -->
     <!-- Navbar -->
+    
   <div class="navbar">
+    <!-- Links to different pages -->
     <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
     <h1 class="name">Rosmini<br> College</h1>
     <a class="links" href="index.html">Home</a>
@@ -22,6 +24,7 @@
     <p class="links">Newsletter</p>
     
  </div> 
+ <!-- School Motto -->
  <div class="motto">
   <h2>Charity Fulfils The Law</h2>
  </div>
