Comments added. Misspelled on purpose.

--- a/staff.html
+++ b/staff.html
@@ -11,6 +11,7 @@
     <!-- Staff Page -->
     <!-- Navbar -->
     <div class="navbar">
+      <!-- Links to different pages -->
         <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
         <h1 class="name">Rosmini<br> College</h1>
         <a class="links" href="index.html">Home</a>
@@ -22,6 +23,7 @@
         <p class="links">Newsletter</p>
         
      </div>
+     <!-- School Motto -->
      <div class="motto">
       <h2 >Charity Fulfils The Law</h2>
      </div>
