--- a/index.html
+++ b/index.html
@@ -45,40 +45,39 @@
     </ol>
 
     <!-- Wrapper for slides -->
-  <div class="container">
-    <div class="carousel-inner">
-      <div class="item active">
-        <img class="carouselimg" src="Images\slide-1.jpg" alt="Students">
-      </div>
+    <div class="container">
+      <div class="carousel-inner">
+        <div class="item active">
+          <img class="carouselimg" src="Images/slide-1.jpg" alt="Students">
+        </div>
+        <div class="item">
+          <img class="carouselimg" src="Images/slide-2.jpg" alt="students">
+        </div>
       <div class="item">
-        <img class="carouselimg" src="Images\slide-2.jpg" alt="students">
-      </div>
-     <div class="item">
-        <img class="carouselimg" src="Images\slide-3.jpg" alt="students">
-      </div>
-      <div class="item">
-        <img class="carouselimg" src="Images\slide-4.jpg" alt="students">
-      </div>
-      <div class="item">
-        <img class="carouselimg" src="Images\slide-5.jpg" alt="students">
+          <img class="carouselimg" src="Images/slide-3.jpg" alt="students">
+        </div>
+        <div class="item">
+          <img class="carouselimg" src="Images/slide-4.jpg" alt="students">
+        </div>
+        <div class="item">
+          <img class="carouselimg" src="Images/slide-5.jpg" alt="students">
+        </div>
       </div>
     </div>
-  </div>
 
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </div>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</div>
 <!-- Body -->
 <div class="body">
   <!-- Body text -->
