Changed slash for image path

--- a/sport.html
+++ b/sport.html
@@ -53,9 +53,9 @@
         <p class="txt">Snowboarding</p>
       </div>
       <div class="image123">
-          <img class="img" src="Images\basketball.jpg" alt="basketball">
-          <img class="img" src="Images\hockey.jpg" alt="hockey">
-          <img class="img" src="Images\snowboard.jpg" alt="snowboarding">
+          <img class="img" src="Images/basketball.jpg" alt="basketball">
+          <img class="img" src="Images/hockey.jpg" alt="hockey">
+          <img class="img" src="Images/snowboard.jpg" alt="snowboarding">
       </div>
     </div>
     <div class="imgs2">
@@ -65,9 +65,9 @@
         <p class="txt">Tennis</p>
       </div>
       <div class="image456">
-        <img class="img" src="Images\cricket.jpg" alt="cricket">
-        <img class="img" src="Images\track.jpg" alt="Track">
-        <img class="img" src="Images\tennis.jpg" alt="Tennis">
+        <img class="img" src="Images/cricket.jpg" alt="cricket">
+        <img class="img" src="Images/track.jpg" alt="Track">
+        <img class="img" src="Images/tennis.jpg" alt="Tennis">
       </div>
     </div>
     <div class="imgs3">
