Fixed mistakes that HTML/CSS validator pointed out

--- a/sport.html
+++ b/sport.html
@@ -77,7 +77,7 @@
         <p class="txt">Rugby</p>
       </div>
       <div class="image789">
-        <img class="img" src="Images/water polo.jpg" alt="Waterpolo">
+        <img class="img" src="Images/water_polo.jpg" alt="Waterpolo">
         <img class="img" src="Images/lacrose.jpg" alt="Lacrosse">
         <img class="img" src="Images/rugby.jpg" alt="Rugby">
       </div>
