Body text size changed.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Home page</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -107,8 +107,8 @@
     Phone: +64 9 489 5417 <br>
     admin@rosmini.school.nz</p>
     <div class="sitemapstd">
-      <a class="sitemap" href="index.html">Home</a><br>
-      <a class="sitemap" href="sport.html">Sport</a>
+      <a class="sitemap" href="index.html">Home</a><br><br>
+      <a class="sitemap" href="sport.html">Sport</a><br><br>
       <p class="sitemap">Student Support</p>
     </div>
     <div class="sitemappar">
