--- a/sport.html
+++ b/sport.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sports Page</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -30,18 +30,18 @@
  </div>
     <!-- Body -->
 <div class="body">
-    <h2>Rosmini College Sports</h2>
+    <h2><b>Rosmini College Sports</b></h2>
     <p>
-        Sport at Rosmini College is an integral element of holistic education and helps promote a healthy and active lifestyle. We have a strong sporting culture and value performance at both the elite and participation levels, offering competitive opportunities in various codes. It is important for young men to involve themselves with physical endeavours throughout their time at school and sport offers a platform for this.
+        <span>Sport at Rosmini College is an integral element of holistic education and helps promote a healthy and active lifestyle. We have a strong sporting culture and value performance at both the elite and participation levels, offering competitive opportunities in various codes. It is important for young men to involve themselves with physical endeavours throughout their time at school and sport offers a platform for this.</span>
         <br><br>
-        We are committed to:
+        <span class="commitment">We are committed to:</span>
         <br><br>
-        Providing opportunities for all students to develop a healthy lifestyle through a breadth and depth of physical activities.
-        Ensuring all students participate in a holistic curriculum which embeds physical activity into their daily routine.
-        Fostering and nurturing athletes who aspire to excellence in their selected codes.
-        Developing the whole person as well as the athlete.
-        Engaging with the school's wider community through developing partnerships with external agencies, regional and national sporting bodies and other schools.
-        Rosmini College primarily focuses on encouraging enjoyment of sport and traditions of sportmanship and fair play. Further to this, excellence is also valued and the Rosmini College High Performance Sport programme is designed to cater for those individuals aiming to follow a pathway of competitive sport.
+        <span >Providing opportunities for all students to develop a healthy lifestyle through a breadth and depth of physical activities. <br> <br>
+        Ensuring all students participate in a holistic curriculum which embeds physical activity into their daily routine. <br> <br>
+        Fostering and nurturing athletes who aspire to excellence in their selected codes. <br> <br>
+        Developing the whole person as well as the athlete. <br> <br>
+        Engaging with the school's wider community through developing partnerships with external agencies, regional and national sporting bodies and other schools. <br> <br>
+        Rosmini College primarily focuses on encouraging enjoyment of sport and traditions of sportmanship and fair play. <br> <br>Further to this, excellence is also valued and the Rosmini College High Performance Sport programme is designed to cater for those individuals aiming to follow a pathway of competitive sport.</span>
     </p>
 </div>
     <!-- Images -->
