--- a/staff.html
+++ b/staff.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Staff Page</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -28,11 +28,15 @@
       <h2 >Charity Fulfils The Law</h2>
      </div>
     <!-- Body -->
+    <div class="staff">
+      <h1>Our Staff</h1>
+    </div>
     <div class="table">
       <table>
           <!--Digital Technology -->
           <tr>
-            <th>Digital Technology</th>
+            <!-- Department name -->
+            <th class="pos">Digital Technology</th>
           </tr>
           <tr> 
             <td>
@@ -48,8 +52,8 @@
             </tr>
             <!-- Geography -->
             <tr>
-            
-              <th>Geography</th>    
+            <!-- Dpeartment name -->
+              <th class="pos">Geography</th>    
             </tr>
             <tr>
               <td>
