--- a/sport.html
+++ b/sport.html
@@ -85,24 +85,24 @@
   </div>
     <!-- Footer -->
     <div class="footer">
-        <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
-        <p class="contactinfo">Contact Us <br>
-          36 Dominion Street <br>
-          Takapuna <br>
-          Auckland, 0622 <br>
-          Phone: +64 9 489 5417 <br>
-          admin@rosmini.school.nz</p>
-          <div class="sitemapstd">
-            <a class="sitemap" href="index.html">Home</a><br>
-            <a class="sitemap" href="sport.html">Sport</a>
-            <p class="sitemap">Student Support</p>
-          </div>
-          <div class="sitemappar">
-            <a class="sitemap" href="staff.html">Staff</a>
-            <p class="sitemap">Learning areas</p>
-            <p class="sitemap">Newsletter</p>
-            <p class="sitemap">Contact Us</p>
-          </div>
-      </div>
+      <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
+      <p class="contactinfo">Contact Us <br>
+        36 Dominion Street <br>
+        Takapuna <br>
+        Auckland, 0622 <br>
+        Phone: +64 9 489 5417 <br>
+        admin@rosmini.school.nz</p>
+        <div class="sitemapstd">
+          <a class="sitemap" href="index.html">Home</a><br><br>
+          <a class="sitemap" href="sport.html">Sport</a><br><br>
+          <p class="sitemap">Student Support</p>
+        </div>
+        <div class="sitemappar">
+          <a class="sitemap" href="staff.html">Staff</a>
+          <p class="sitemap">Learning areas</p>
+          <p class="sitemap">Newsletter</p>
+          <p class="sitemap">Contact Us</p>
+        </div>
+  </div>
 </body>
 </html>
