--- a/sport.html
+++ b/sport.html
@@ -46,36 +46,45 @@
 </div>
     <!-- Images -->
   <div class="images">
+    <!-- Group 1 -->
     <div class="imgs1">
+      <!-- Text G1 -->
       <div class="text123">
         <p class="txt">Basketball</p>
         <p class="txt">Hockey</p>
         <p class="txt">Snowboarding</p>
       </div>
+      <!-- Image G1 -->
       <div class="image123">
           <img class="img" src="Images/basketball.jpg" alt="basketball">
           <img class="img" src="Images/hockey.jpg" alt="hockey">
           <img class="img" src="Images/snowboard.jpg" alt="snowboarding">
       </div>
     </div>
+    <!-- Group 2 -->
     <div class="imgs2">
+      <!-- Text G2 -->
       <div class="text456">
         <p class="txt">Cricket</p>
         <p class="txt">Track</p>
         <p class="txt">Tennis</p>
       </div>
+      <!-- Image G2 -->
       <div class="image456">
         <img class="img" src="Images/cricket.jpg" alt="cricket">
         <img class="img" src="Images/track.jpg" alt="Track">
         <img class="img" src="Images/tennis.jpg" alt="Tennis">
       </div>
     </div>
+    <!-- Group 3 -->
     <div class="imgs3">
+      <!-- Text G3 -->
       <div class="text789">
         <p class="txt">Waterpolo</p>
         <p class="txt">Lacrosse</p>
         <p class="txt">Rugby</p>
       </div>
+      <!-- Image G3 -->
       <div class="image789">
         <img class="img" src="Images/water_polo.jpg" alt="Waterpolo">
         <img class="img" src="Images/lacrose.jpg" alt="Lacrosse">
