--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!-- 
+  --------------------------------
+   Home Page for Rosmini Website
+    File: index.html
+    Author: Szymon Merilles
+    Date: 25/03/2025
+   -------------------------------- 
+   -->
 <!DOCTYPE html>
 <html lang="en">
 
