--- a/staff.html
+++ b/staff.html
@@ -1,3 +1,11 @@
+<!-- 
+  --------------------------------
+   Staff Page for Rosmini Website
+    File: staff.html
+    Author: Szymon Merilles
+    Date: 25/03/2025
+   -------------------------------- 
+   -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
