Basketball image cropped and resized

--- a/sport.html
+++ b/sport.html
@@ -12,6 +12,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports Page</title>
+    <!-- Bootstrap Stylesheet -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
      <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +71,7 @@
       </div>
       <!-- Image G1 -->
       <div class="image123">
-          <img class="img" src="Images/basketball.jpg" alt="basketball">
+          <img class="img" src="Images/basketball.png" alt="basketball">
           <img class="img" src="Images/hockey.jpg" alt="hockey">
           <img class="img" src="Images/snowboard.jpg" alt="snowboarding">
       </div>
