--- a/sport.html
+++ b/sport.html
@@ -47,11 +47,11 @@
 <div class="body">
     <h2><b>Rosmini College Sports</b></h2>
     <p>
-        <span>Sport at Rosmini College is an integral element of holistic education and helps promote a healthy and active lifestyle. We have a strong sporting culture and value performance at both the elite and participation levels, offering competitive opportunities in various codes. It is important for young men to involve themselves with physical endeavours throughout their time at school and sport offers a platform for this.</span>
+        <span class="sport">Sport at Rosmini College is an integral element of holistic education and helps promote a healthy and active lifestyle. We have a strong sporting culture and value performance at both the elite and participation levels, offering competitive opportunities in various codes. It is important for young men to involve themselves with physical endeavours throughout their time at school and sport offers a platform for this.</span>
         <br><br>
         <span class="commitment">We are committed to:</span>
         <br><br>
-        <span >Providing opportunities for all students to develop a healthy lifestyle through a breadth and depth of physical activities. <br> <br>
+        <span class="sport" >Providing opportunities for all students to develop a healthy lifestyle through a breadth and depth of physical activities. <br> <br>
         Ensuring all students participate in a holistic curriculum which embeds physical activity into their daily routine. <br> <br>
         Fostering and nurturing athletes who aspire to excellence in their selected codes. <br> <br>
         Developing the whole person as well as the athlete. <br> <br>
