Fixed the layout of the staff pictures

--- a/staff.html
+++ b/staff.html
@@ -48,10 +48,10 @@
           <!--Digital Technology -->
           <tr>
             <!-- Department name -->
-            <th colspan="3" class="pos">Digital Technology</th>
+            <th  class="pos">Digital Technology</th>
           </tr>
           <tr>
-            <td colspan="3">
+            <td >
               <p class="p"><span>Mr. John</span> <br> Digital Technology</p>
               <img class="staffimg" src="Images/John.png" alt="Mr John">
             </td>
@@ -65,7 +65,7 @@
             <tr>
               <!-- Dpeartment name -->
           
-              <th colspan="3" class="pos">Geography</th>    
+              <th  class="pos">Geography</th>    
             </tr>
             <tr>
               <td>
