--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
   <!-- CSS stylesheet -->
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="./CSS/main.css">
 </head>
 
 <body>
@@ -32,8 +32,8 @@
       <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
       <h1 class="name">Rosmini<br> College</h1>
       <a class="links" href="index.html">Home</a>
-      <a class="links" href="staff.html">Staff</a>
-      <a class="links" href="sport.html">Sport</a>
+      <a class="links" href="./Web pages/staff.html">Staff</a>
+      <a class="links" href="./Web pages/sport.html">Sport</a>
       <p class="links">Contact Us</p>
       <p class="links">Student Support</p>
       <p class="links">Learning areas</p>
@@ -119,11 +119,11 @@
     admin@rosmini.school.nz</p>
     <div class="sitemapstd">
       <a class="sitemap" href="index.html">Home</a><br><br>
-      <a class="sitemap" href="sport.html">Sport</a><br><br>
+      <a class="sitemap" href="./Web pages/sport.html">Sport</a><br><br>
       <p class="sitemap">Student Support</p>
     </div>
     <div class="sitemappar">
-      <a class="sitemap" href="staff.html">Staff</a>
+      <a class="sitemap" href="./Web pages/staff.html">Staff</a>
       <p class="sitemap">Learning areas</p>
       <p class="sitemap">Newsletter</p>
       <p class="sitemap">Contact Us</p>
