--- a/Web pages/sport.html
+++ b/Web pages/sport.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
   <!-- CSS stylesheet -->
-    <link rel="stylesheet" href="./CSS/main.css">
+    <link rel="stylesheet" href="../CSS/main.css">
 </head>
 <body>
   <!-- NOT AI  -->
@@ -28,9 +28,9 @@
     
   <div class="navbar">
     <!-- Links to different pages -->
-    <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
+    <img class="logo" src="../Images/school_logo.png" alt="Rosmini College Logo">
     <h1 class="name">Rosmini<br> College</h1>
-    <a class="links" href="./dte_final_assessment/index.html">Home</a>
+    <a class="links" href="../index.html>Home"></a>
     <a class="links" href="staff.html">Staff</a>
     <a class="links" href="sport.html">Sport</a>
     <p class="links">Contact Us</p>
@@ -71,9 +71,9 @@
       </div>
       <!-- Image G1 -->
       <div class="image123">
-          <img class="img" src="Images/basketball.png" alt="basketball">
-          <img class="img" src="Images/hockey.jpg" alt="hockey">
-          <img class="img" src="Images/snowboard.jpg" alt="snowboarding">
+          <img class="img" src="../Images/basketball.png" alt="basketball">
+          <img class="img" src="../Images/hockey.jpg" alt="hockey">
+          <img class="img" src="../Images/snowboard.jpg" alt="snowboarding">
       </div>
     </div>
     <!-- Group 2 -->
@@ -86,9 +86,9 @@
       </div>
       <!-- Image G2 -->
       <div class="image456">
-        <img class="img" src="Images/cricket.jpg" alt="cricket">
-        <img class="img" src="Images/track.jpg" alt="Track">
-        <img class="img" src="Images/tennis.jpg" alt="Tennis">
+        <img class="img" src="../Images/cricket.jpg" alt="cricket">
+        <img class="img" src="../Images/track.jpg" alt="Track">
+        <img class="img" src="../Images/tennis.jpg" alt="Tennis">
       </div>
     </div>
     <!-- Group 3 -->
@@ -101,15 +101,15 @@
       </div>
       <!-- Image G3 -->
       <div class="image789">
-        <img class="img" src="Images/water_polo.jpg" alt="Waterpolo">
-        <img class="img" src="Images/lacrose.jpg" alt="Lacrosse">
-        <img class="img" src="Images/rugby.jpg" alt="Rugby">
+        <img class="img" src="../Images/water_polo.jpg" alt="Waterpolo">
+        <img class="img" src="../Images/lacrose.jpg" alt="Lacrosse">
+        <img class="img" src="../Images/rugby.jpg" alt="Rugby">
       </div>
     </div>
   </div>
     <!-- Footer -->
     <div class="footer">
-      <img class="logo" src="Images/school_logo.png" alt="Rosmini College Logo">
+      <img class="logo" src="../Images/school_logo.png" alt="Rosmini College Logo">
       <p class="contactinfo">Contact Us <br>
         36 Dominion Street <br>
         Takapuna <br>
@@ -117,12 +117,12 @@
         Phone: +64 9 489 5417 <br>
         admin@rosmini.school.nz</p>
         <div class="sitemapstd">
-          <a class="sitemap" href="index.html">Home</a><br><br>
-          <a class="sitemap" href="./Web pages/sport.html">Sport</a><br><br>
+          <a class="sitemap" href="../index.html">Home</a><br><br>
+          <a class="sitemap" href="sport.html">Sport</a><br><br>
           <p class="sitemap">Student Support</p>
         </div>
         <div class="sitemappar">
-          <a class="sitemap" href="./Web pages/staff.html">Staff</a>
+          <a class="sitemap" href="staff.html">Staff</a>
           <p class="sitemap">Learning areas</p>
           <p class="sitemap">Newsletter</p>
           <p class="sitemap">Contact Us</p>
