--- a/Web pages/sport.html
+++ b/Web pages/sport.html
@@ -30,7 +30,7 @@
     <!-- Links to different pages -->
     <img class="logo" src="../Images/school_logo.png" alt="Rosmini College Logo">
     <h1 class="name">Rosmini<br> College</h1>
-    <a class="links" href="../index.html>Home"></a>
+    <a class="links" href="../index.html>Home">Home</a>
     <a class="links" href="staff.html">Staff</a>
     <a class="links" href="sport.html">Sport</a>
     <p class="links">Contact Us</p>
